Update L2 68114030 Pongsiri Patsuwan L001.html

--- a/68114030/L2 68114030 Pongsiri Patsuwan L001.html
+++ b/68114030/L2 68114030 Pongsiri Patsuwan L001.html
@@ -57,8 +57,18 @@
                 <div class="col-md-4">
                     <img src="https://cdn.prod.website-files.com/61c1522cd03553569e619b01/649bea677ec0e0d990ac1b90_%E0%B8%A3%E0%B8%A7%E0%B8%A1%203%20%E0%B8%AA%E0%B8%B2%E0%B8%A2%E0%B8%9E%E0%B8%B1%E0%B8%99%E0%B8%98%E0%B8%B8%E0%B9%8C%E0%B8%99%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%AB%E0%B8%A1%E0%B8%B2%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%83%E0%B8%84%E0%B8%A3%20%E0%B9%86%20%E0%B9%80%E0%B8%AB%E0%B9%87%E0%B8%99%E0%B9%80%E0%B8%9B%E0%B9%87%E0%B8%99%E0%B8%95%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%AB%E0%B8%A5%E0%B8%87%E0%B8%A3%E0%B8%B1%E0%B8%81-01.jpg" alt="">
                 </div>
+                                <div class="col-md-4">
+                    <img src="https://image.dogilike.com/shareimg/contentimg/2021/meaw/%E0%B9%80%E0%B8%A3%E0%B8%B7%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%99%E0%B9%88%E0%B8%B2%E0%B8%A3%E0%B8%B9%E0%B9%89/29092021/iStock-953069774.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://static.wixstatic.com/media/2cc7a8_49de8dea6c1948e69ecdf14de2766441~mv2.jpg/v1/fill/w_980,h_649,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/2cc7a8_49de8dea6c1948e69ecdf14de2766441~mv2.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOZ1ow6bR8FijlmUgfajPv1bghKHOt52jkbQ&s" alt="">
+                </div>
             </div>
         </section>
 </body>
 
 </html>
+
